<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/mall_title_bar_text"
            android:textSize="@dimen/mall_title_text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/mall_title_line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingTop="8dp"
        android:paddingRight="12dp">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="true"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp"
                android:text="@string/forget_phone_type"
                android:textColor="@color/login_type_color"
                android:textSize="@dimen/mall_main_tab_text_size" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp"
                android:text="@string/forget_email_type"
                android:textColor="@color/login_type_color"
                android:textSize="@dimen/mall_main_tab_text_size" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/mall_main_text" />

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textColor="@color/mall_product_price"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password_adress"
                    android:textColor="@color/mall_main_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bottom_dialog_bg"
                android:gravity="center_vertical"
                android:hint="@string/forget_password_edit_address"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/mall_main_text"
                android:textColorHint="@color/mall_gray_text"
                android:textSize="@dimen/mall_start_search_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textColor="@color/mall_product_price"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password_phone_address"
                    android:textColor="@color/mall_main_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bottom_dialog_bg"
                android:orientation="horizontal"
                android:padding="1dp">

                <EditText
                    android:id="@+id/phone_country_edit"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:hint="@string/login_phone_china"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/mall_main_text"
                    android:textColorHint="@color/mall_gray_text"
                    android:textSize="@dimen/mall_start_search_text" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/mall_line" />

                <EditText
                    android:id="@+id/phone_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/forget_phone_edit_address"
                    android:paddingLeft="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/mall_main_text"
                    android:textColorHint="@color/mall_gray_text"
                    android:textSize="@dimen/mall_start_search_text" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/mall_main_blue_text"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.c.hangxunc.pages.widget.BottomView
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/white" />
    </LinearLayout>

</LinearLayout>