<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mall_main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/mall_main_bg"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="14dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:scaleType="fitXY"
                android:src="@mipmap/back" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/register_title"
                android:textColor="@color/mall_title_bar_text"
                android:textSize="@dimen/mall_title_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/mall_title_line_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingRight="12dp">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/show_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:button="@null"
                    android:checked="true"
                    android:drawableBottom="@drawable/mall_radio_line_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/register_phone_type"
                    android:textColor="@color/mall_login_type_color"
                    android:textSize="@dimen/mall_main_tab_text_size" />

                <RadioButton
                    android:id="@+id/show_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:button="@null"
                    android:drawableBottom="@drawable/mall_radio_line_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/register_email_type"
                    android:textColor="@color/mall_login_type_color"
                    android:textSize="@dimen/mall_main_tab_text_size" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/mall_black_line" />

            <LinearLayout
                android:id="@+id/email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/mall_bottom_dialog_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_email"
                    android:paddingLeft="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/mall_main_text"
                    android:textColorHint="@color/mall_gray_text"
                    android:textCursorDrawable="@drawable/mall_edit_cursor"
                    android:textSize="@dimen/mall_start_search_text" />


                <EditText
                    android:id="@+id/email_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/mall_bottom_dialog_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/mall_main_text"
                    android:textColorHint="@color/mall_gray_text"
                    android:textCursorDrawable="@drawable/mall_edit_cursor"
                    android:textSize="@dimen/mall_start_search_text" />

                <EditText
                    android:id="@+id/email_password_re_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/mall_bottom_dialog_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_re_password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/mall_main_text"
                    android:textColorHint="@color/mall_gray_text"
                    android:textCursorDrawable="@drawable/mall_edit_cursor"
                    android:textSize="@dimen/mall_start_search_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/mall_bottom_dialog_bg"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <TextView
                        android:id="@+id/phone_country_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="24dp"
                        android:background="@color/white"
                        android:drawableRight="@mipmap/login_cell_code_selsect"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp"
                        android:paddingRight="4dp"
                        android:paddingBottom="12dp"
                        android:text="@string/login_phone_china"
                        android:textColor="@color/mall_main_text"
                        android:textColorHint="@color/mall_gray_text"
                        android:textSize="@dimen/mall_start_search_text" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="@color/mall_line" />

                    <EditText
                        android:id="@+id/phone_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:hint="@string/login_phone"
                        android:inputType="number"
                        android:maxEms="11"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textColor="@color/mall_main_text"
                        android:textColorHint="@color/mall_gray_text"
                        android:textCursorDrawable="@drawable/mall_edit_cursor"
                        android:textSize="@dimen/mall_start_search_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:padding="1dp">


                    <EditText
                        android:id="@+id/sms_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/mall_bottom_dialog_bg"
                        android:gravity="center_vertical"
                        android:hint="@string/sns_code"
                        android:inputType="number"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="12dp"
                        android:textColor="@color/mall_main_text"
                        android:textColorHint="@color/mall_gray_text"
                        android:textCursorDrawable="@drawable/mall_edit_cursor"
                        android:textSize="@dimen/mall_start_search_text" />

                    <TextView
                        android:id="@+id/sms_get"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:background="@color/mall_main_blue_text_un_enable"
                        android:enabled="false"
                        android:gravity="center"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/sns_code_get"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mall_start_search_text" />


                </LinearLayout>

                <EditText
                    android:id="@+id/phone_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/mall_bottom_dialog_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/mall_main_text"
                    android:textColorHint="@color/mall_gray_text"
                    android:textCursorDrawable="@drawable/mall_edit_cursor"
                    android:textSize="@dimen/mall_start_search_text" />

                <EditText
                    android:id="@+id/phone_password_re_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/mall_bottom_dialog_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_re_password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/mall_main_text"
                    android:textColorHint="@color/mall_gray_text"
                    android:textCursorDrawable="@drawable/mall_edit_cursor"
                    android:textSize="@dimen/mall_start_search_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/book_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/book_email"
                android:textColor="@color/mall_main_text"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radio_group_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/radio_book_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:includeFontPadding="false"
                    android:text="@string/yes"
                    android:textColor="@color/mall_login_type_color"
                    android:textSize="@dimen/mall_main_tab_text_size" />

                <RadioButton
                    android:id="@+id/radio_book_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:includeFontPadding="false"
                    android:text="@string/no"
                    android:textColor="@color/mall_login_type_color"
                    android:textSize="@dimen/mall_main_tab_text_size" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/readed"
                    android:textColor="@color/mall_login_type_color"
                    android:textSize="@dimen/mall_main_tab_text_size" />

                <TextView
                    android:id="@+id/rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/register_rule"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/mall_main_tab_text_size" />
            </LinearLayout>


            <TextView
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/mall_button_bg_color"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.mall.hangxunc.pages.widget.BottomView
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <com.mall.hangxunc.loading.LoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

</RelativeLayout>